gobmkida/c3/hashtable_partially_clear
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/engine/cache.c:808:7: error: expected ';' after expression
_OWORD s[4]; // [rsp+70h] [rbp-268h] BYREF 
      ^
      ;
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/engine/cache.c:808:1: error: use of undeclared identifier '_OWORD'
_OWORD s[4]; // [rsp+70h] [rbp-268h] BYREF 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/engine/cache.c:808:8: error: use of undeclared identifier 's'
_OWORD s[4]; // [rsp+70h] [rbp-268h] BYREF 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/engine/cache.c:814:9: error: use of undeclared identifier 's'
memset( s, 0, 0x230uLL); 
        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/engine/cache.c:850:18: error: use of undeclared identifier 's'
++*( ( _DWORD *)&s[5 * v11] + ( unsigned int)v10); 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/engine/cache.c:958:45: error: use of undeclared identifier 'qword_4A92B8'
fprintf( stderr, "%-14s%6d", ( const char *)qword_4A92B8[v16], v20); 
                                            ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/hashtable_partially_clear/src/obj/1/cache.o] Error 1
